# fada_cpp_py

./: .gitignore  CMakeLists.txt  chorin.cpp  chorin_sde.py  fada.py  fadamain.cpp  install.py  main.cpp  run.py  stokes_error.cpp  test.py  test_multigrid.py  testarma.cpp  testsmoothers.py  time.py  todo.rtf  visu.py  visu_stokes.py
Fada/: CMakeLists.txt  analyticalfunctioninterface.hpp  applicationinterface.hpp  array.h  array.hpp  boundary_conditions.hpp  coarsesolver_arma.hpp  coarsesolverinterface.hpp  construct_elements_matrix.hpp  feminterface.hpp  finiteelementinterface.hpp  fullmatrix.cpp  fullmatrix.hpp  gridindex.hpp  gridinterface.hpp  gridvector.cpp  gridvector.hpp  info.cc  info.h  main.cc  main.cpp  matrixinterface.cpp  matrixinterface.hpp  mg.h  mgsolver.cpp  mgsolver.hpp  model_p.cpp  model_p.hpp  model_stokes.cpp  model_stokes.hpp  model_v.cpp  model_v.hpp  modelbase.cpp  modelbase.hpp  modelinterface.hpp  multigrid.cpp  multigrid.hpp  multigridinterface.hpp  nodevector.cpp  nodevector.hpp  (+78 more)
Fada.comp/: CMakeCache.txt  Makefile  cmake_install.cmake  fada
Fada.xcodeproj/: project.pbxproj
Fada.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Fada.xcodeproj/project.xcworkspace/xcuserdata/becker.xcuserdatad/: UserInterfaceState.xcuserstate
Fada.xcodeproj/xcshareddata/xcschemes/: Fada.xcscheme  test.xcscheme  testarma.xcscheme
Fada.xcodeproj/xcuserdata/becker.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Fada.xcodeproj/xcuserdata/becker.xcuserdatad/xcschemes/: xcschememanagement.plist
Fada/Q1/: boundary_conditions.hpp  gridvector.hpp  modelbase.cpp  modelbase.hpp  nodevector.cpp  nodevector.hpp  q1.cpp  q1.hpp  seamvector.cpp  seamvector.hpp  solverlaplace.cpp  solverlaplace.hpp  stencil.hpp  stencil2d.cpp  stencil2d.hpp  stencil3d.cpp  stencil3d.hpp  transferbymatrix.hpp  transferq1.cpp  transferq1.hpp
Fada/Stokes/: model_p.cpp  model_p.hpp  model_stokes.cpp  model_stokes.hpp  model_v.cpp  model_v.hpp  smoother_chorin.cpp  smoother_chorin.hpp  solverstokes.cpp  solverstokes.hpp  stokesapplication.cpp  stokesapplication.hpp  stokesvector.hpp
OptimizationProfiles/: Fada.profdata
doc/: test.rtf
fada_src/: CMakeLists.txt  fada.py  install.py
fada_src/Fada/: analyticalfunctioninterface.hpp  applicationinterface.hpp  boundary_conditions.hpp  construct_elements_matrix.hpp  gridindex.hpp  gridinterface.hpp  gridvector.cpp  gridvector.hpp  matrixinterface.hpp  mgsolver.cpp  mgsolver.hpp  model_stokes.cpp  model_stokes.hpp  modelbase.cpp  modelbase.hpp  modelinterface.hpp  multigrid.hpp  multigridinterface.hpp  parametermap.cpp  parametermap.hpp  q0.cpp  q0.hpp  q1.cpp  q1.hpp  q1_shifted.cpp  q1_shifted.hpp  seamvector.cpp  smoother_chorin.cpp  smoothersimple.cpp  solver.cpp  solver.hpp  solverlaplace.cpp  solverlaplace.hpp  solverstokes.cpp  solverstokes.hpp  solverumf.cpp  solverumf.hpp  sparsematrix.cpp  sparsematrix.hpp  stokesapplication.cpp  (+16 more)
fada_src/old/: stencil3d.hpp  trapezmatrix.hpp
fada_src/pybind/: bindings.cpp  solverlaplacepy.hpp  solverstokespy.hpp  uniformgridpy.hpp  uniformmultigridpy.cpp  uniformmultigridpy.hpp
fada_src/python/: laplace_error.py  stokes_error.py  test_multigrid.py  visu.py
fada_src/python/fadalib/: datatk.py
old/: fullmatrix.cpp  fullmatrix.hpp  operatorpy.cpp  operatorpy.hpp  trapezmatrix.cpp
pybind/: arma2py.hpp  bindings.cpp  carma.h  operator.cpp  operatorpy.cpp  operatorpy.hpp  solverlaplacepy.cpp  solverlaplacepy.hpp  solverstokespy.hpp  uniformgridpy.cpp  uniformgridpy.hpp  uniformmultigridpy.cpp  uniformmultigridpy.hpp
pybind/carma/: carma.h
python/: chorin.py  datatk.py  laplace_error.py  run.py  stokes_error.py  visu.py
test/: main.cpp
testarma/: main.cpp
